Fix vertical scrollbar on 1.2 on mobile

--- a/source/stylesheets/risky.css.scss
+++ b/source/stylesheets/risky.css.scss
@@ -153,7 +153,7 @@ ol {
 @media (max-width: 727px) {
   #map {
     overflow-x: auto; /* scroll on mobile */
-    height: 680px; /* add some height to accomodate the horizontal scroll bar */
+    height: 682px; /* add some height to accomodate the horizontal scroll bar */
   }
 }
 
